tests/errors/assign_int_to_set.l26
{
    set s;
    s = 5;          // error: assigning int to a set variable
    write s;
}
